removed some tech from ribbons because can only fit 7 on a ribbon so removing them too from the marble case

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -168,7 +168,7 @@ also cause a white space at bottom because now contributes to the height-->
                 <li data-toggle="tooltip" data-placement="top" title="Click to see all projects"><div class="aMarble aMarbleGlassEffect"value="allProjects"><img class="aMarbleImg " src="Images\marbles\allProjects.png" alt="All Projects" ></div></li>
 
 <!-- API  -->
-          <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Google OAuth"><div class="aMarble aMarbleGlassEffect"value="googleOAuth"><img class="aMarbleImg " src="Images\marbles\googleOAuth.png" alt=" Google OAuth marble" ></div></li>
+          <!-- <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Google OAuth"><div class="aMarble aMarbleGlassEffect"value="googleOAuth"><img class="aMarbleImg " src="Images\marbles\googleOAuth.png" alt=" Google OAuth marble" ></div></li> --><!--didnt have enough space on ribbon for all marbles so not using this now-->
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Google Map API"><div class="aMarble aMarbleGlassEffect"value="googleMapAPI"><img class="aMarbleImg " src="Images\marbles\googleMapAPI.png" alt="Google Map API marble" ></div></li>
           <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use MailChimp API"><div class="aMarble aMarbleGlassEffect"value="mailChimp"><img class="aMarbleImg " src="Images\marbles\mailChimp.png" alt="mailChimp API marble" ></div></li>
 <!-- Tools -->
@@ -187,7 +187,7 @@ also cause a white space at bottom because now contributes to the height-->
           <!-- <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Visual Studio"><div class="aMarble aMarbleGlassEffect"value="visualStudio"><img class="aMarbleImg " src="Images\marbles\visualStudio.jfif" alt="Visual Studio marble" ></div></li> -->
 <!--methodologies not many examples -->
 <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Agile"><div class="aMarble aMarbleGlassEffect"value="agile"><img class="aMarbleImg " src="Images\marbles\agile.png" alt="Agile marble" ></div></li>
-<li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Java"><div class="aMarble aMarbleGlassEffect"value="java"><img class="aMarbleImg " src="Images\marbles\java.png" alt="Java marble" ></div></li>
+<!-- <li data-toggle="tooltip" data-placement="top" title="Click to see all projects that use Java"><div class="aMarble aMarbleGlassEffect"value="java"><img class="aMarbleImg " src="Images\marbles\java.png" alt="Java marble" ></div></li> -->
 
 <!--ADD SOME TESTING STUFF LIKE MOCKITO--->
         </ul>
