--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -2574,9 +2574,37 @@ display:inline-block;added*/
 }
 
 
+.centerInnerPDI{
+
+    margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width:70%;
+      /* height:100%; */
+      transform: translate(-50%, -50%);
+      font-family: 'PT Serif', serif;
+          line-height: 1.5em;
+          color:#cbd6cb;
+          text-align: center;
+    }
 
 
 
+#PageDescriptionIntroBody{
+  background: #262626 !important;
+  /*
+  height: 100vh; width: 100vw;*/
+     /*position: relative;*/
+     /* top: 50%;*/
+     width: 100vw;
+    /*height: 100%;*/
+
+
+}
+
+.anchorPGI{color:#007bff; text-decoration: underline;
+}
 
 /*use something like this to reduce to just the tea icon see media notes in notes document*/
 @media (max-width:1028px) {}
