--- a/views/PageDescriptionIntro.ejs
+++ b/views/PageDescriptionIntro.ejs
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <title>Help Phil Find His Marbles</title>
+  <title>Phil Tate's first website</title>
 
 
 
@@ -34,8 +34,10 @@
 
 
     <div class="centerInnerPDI">
-    <h4><a class="anchorPGI" href="https://lit-escarpment-48431.herokuapp.com/Main">Go straight to site</a></h4>
-  <br><br>
+    <h4>
+      <a class="anchorPGI" href="https://lit-escarpment-48431.herokuapp.com/Main">Go straight to site</a>
+    </h4>
+  <br/><br/>
      <h4>This is my first website. It is a creative desktop site made to test and develop my learning.
      I made everything from scratch (no plugins).
      Only the carousel is based off external code (cloud9).
@@ -45,9 +47,9 @@
      <br/><br/>I hope you like it!<br/><br/>
      Drag, turn and click things, have fun and explore.
      The site will load in a few seconds or click the top link.
-     <br/><br/>
+   </h4><br/><br/>
      <h4 style="text-align:left;">Alternatively...</h4>
-    <br/></h4><h5><a class="anchorPGI" href="https://phy5prt.github.io/BootstrapPortfolioWebsite/"> Click here to go to my professional mobile friendly portfolio site instead</a></h5>
+    <br/><h5><a class="anchorPGI" href="https://phy5prt.github.io/BootstrapPortfolioWebsite/"> Click here to go to my professional mobile friendly portfolio site instead</a></h5>
 
 
    </div>
